FormalGrammar.txt
Formal Grammar

Block -> HorizontalRule | AtxHeading

HorizontalRule -> SpaceChar* ( '*' SpaceChar* '*' SpaceChar* '*' (SpaceChar* '*')*
                             | '-' SpaceChar* '-' SpaceChar* '-' (SpaceChar* '-')*
                             | '_' SpaceChar* '_' SpaceChar* '_' (SpaceChar* '_')*)
                  SpaceChar* Terminal

AtxHeading -> AtxStart SpaceChar+ AtxInline AtxClosing? Terminal
AtxStart -> "######" | "#####" | "####" | "###" | "##" | "#"
AtxInline -> !Newline !AtxClosing Inline
AtxClosing -> (SpaceChar+ '#'* SpaceChar*)

CodeSpan -> Ticks1 (!Ticks1 !Terminal .)+ Ticks1
          | Ticks2 (!Ticks2 !Terminal .)+ Ticks2
          | Ticks3 (!Ticks3 !Terminal .)+ Ticks3
          | Ticks4 (!Ticks4 !Terminal .)+ Ticks4
          | Ticks5 (!Ticks5 !Terminal .)+ Ticks5
Ticks1 -> "`" !'`'
Ticks2 -> "``" !'`'
Ticks3 -> "```" !'`'
Ticks4 -> "````" !'`'
Ticks5 -> "`````" !'`'

Strong -> StrongStar | StrongUnderscore
StrongStar -> "**" !SpaceChar (!"**" Inline)+ !SpaceChar "**"
StrongUnderscore -> "__" !SpaceChar (!"__" Inline)+ !SpaceChar "__"

Emphasis -> EmphasisStar | EmphasisUnderscore
EmphasisStar -> '*' !SpaceChar (!'*' Inline)+ !SpaceChar '*'
EmphasisUnderscore -> '_' !SpaceChar (!'_' Inline)+  !SpaceChar '_'

SpaceChar -> ' ' | '\t'
Terminal -> NewLine | EOF
NewLine -> '\n'
EOF -> !.
Inline -> Str | CodeSpan | Emphasis
